<resources>
    <string name="app_name">Kalunga</string>
    <string name="logo_kalunga_fondo_transparente">Logo kalunga fondo transparente</string>
    <string name="kalunga">KALUNGA</string>
    <string name="venecambios">Venecambios</string>
    <string name="bandera_de_venezuela">Bandera de venezuela</string>
    <string name="cargando">Cargando</string>
    <string name="rationale_write_storage">Esta aplicación necesita acceso a su archivos para que pueda enviar información</string>
    <string name="rationale_camera">Esta aplicación necesita acceso a su cámara para que pueda tomar fotografías</string>
    <string name="rationale_default">Esta aplicación requiere un permiso adicional</string>
    <string name="permisos_denegados">Debe autorizar todos los permisos para continuar</string>
    <string name="sin_conexion">Debe tener internet para continuar</string>
    <string name="cerrar">CERRAR</string>
    <string name="actualizacion_cancelada">¡Actualización cancelada por el usuario!</string>
    <string name="actualizacion_exitosa">¡Actualización exitosa!</string>
    <string name="actualizacion_fallida">¡Actualización fallida!</string>
    <string name="on_permissions_granted">onPermissionsGranted:</string>
    <string name="double_point">:</string>
    <string name="permission_denied">onPermissionsDenied:</string>
    <string name="logo_kalunga_fondo_blanco">Logo Kalunga fondo blanco</string>
    <string name="env_a_dinero_de_manera_segura_y_responsable">Envía dinero de manera segura y responsable</string>
    <string name="te_ofrecemos_la_mejor_tasa">¡Te ofrecemos la mejor tasa!</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="iniciar_sesi_n_con_facebook">Iniciar sesión con Facebook</string>
    <string name="continuar_con_google">Continuar con Google</string>
    <string name="reg_strate_gratis">Regístrate gratis</string>
    <string name="debe_tener_internet_continuar_google">Debe tener internet para continuar con Google</string>
    <string name="error_login_google">Error al continuar con Google</string>
    <string name="cargando_puntos">Cargando…</string>
    <string name="facebook_app_id">343656394016606</string>
    <string name="fb_login_protocol_scheme">fb343656394016606</string>
    <string name="internet_sesion_facebook">Debe tener internet para iniciar sesión con Facebook</string>
    <string name="error_login_facebook">Error al iniciar sesión con Facebook</string>
    <string name="crea_tu_cuenta">Crea tu cuenta</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="nombre">Nombre</string>
    <string name="contraseña">Contraseña</string>
    <string name="confirmar_contraseña">Confirmar contraseña</string>
    <string name="continuar">Continuar</string>
    <string name="ya_tienes_cuenta">¿Ya tienes una cuenta?</string>
    <string name="cono_atr_s">ícono atrás</string>
    <string name="ver_u_ocultar_confirmaci_n_de_contrase_a">ver u ocultar confirmación de contraseña</string>
    <string name="ver_u_ocultar_contrase_a">ver u ocultar contraseña</string>
    <string name="datos_iniciales">Datos iniciales</string>
    <string name="numero_de_documento">Número de documento</string>
    <string name="numero_movil">Número móvil</string>
    <string name="ciudad">Ciudad</string>
    <string name="al_registrarme_acepto_">Al registrarme, acepto que he leído las <u><b>condiciones de uso</b></u> y comprendo la <u><b>declaración de privacidad</b></u> para usuarios</string>
    <string name="configurando">Configurando…</string>
    <string name="registrate">Regístrate</string>
    <string name="icono">icono</string>
    <string name="país">SELECCIONE EL PAÍS</string>
    <string name="seleccion_tipo_documento">TIPO DE DOCUMENTO</string>
    <string name="separador">&#160;-&#160;</string>
    <string name="privacy_statement">privacy statement</string>
    <string name="terms_of_use">terms of use</string>
    <string name="condiciones_de_uso">condiciones de uso</string>
    <string name="declaracion_de_privacidad">declaración de privacidad</string>
    <string name="terms_and_privacy">Terms and privacy</string>
    <string name="debe_tener_conecion_a_internet_para_continuar">Debe tener conexión a internet para continuar</string>
    <string name="El_correo_ingresado_ya_tiene_una_cuenta_asociada_en_Kalunga">El correo ingresado ya tiene una cuenta asociada en Kalunga</string>
    <string name="El_correo_ingresado_no_ha_sido_validado_verifique_su_email">El correo ingresado no ha sido validado, verifique su email</string>
    <string name="Hemos_enviado_un_correo_electrónico_valide_su_cuenta">Hemos enviado un correo electrónico, valide su cuenta</string>
    <string name="No_ha_sido_posible_enviarle_el_correo_electronico_contactese">No ha sido posible enviarle el correo electrónico, contáctese con el administrador</string>
    <string name="Error_en_el_servidor_por_favor_intente_mas_tarde">Error en el servidor, por favor intente más tarde</string>
</resources>