<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.jhonnatan.kalunga.core.home.splashScreen.presentation.viewModel.SplashScreenViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/fondo_inicio"
        tools:context=".core.home.splashScreen.presentation.view.SplashScreenActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_circle_logo"
            android:contentDescription="@string/logo_kalunga_fondo_transparente"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/textViewNameApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kalunga"
            android:textColor="@color/white"
            android:fontFamily="@font/gill_sans_mt_bold_italic"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewLastNameApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gill_sans_mt_bold_italic"
            android:text="@string/venecambios"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewNameApp" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>