<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <data>
            <variable
                name="vModel"
                type="com.jhonnatan.kalunga.presentation.core.session.viewModels.SignUpViewModel" />
        </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.core.session.views.SignUpActivity"
        android:background="@mipmap/fondo_pantalla_sesion">

        <ImageView
            android:id="@+id/imageViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back_button"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlCompat,RtlSymmetry"
            android:contentDescription="@string/cono_atr_s" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gill_sans_mt_bold"
                android:text="@string/crea_tu_cuenta"
                android:textColor="@color/purple"
                android:textSize="40sp"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input"
                android:fontFamily="@font/gill_sans_mt_medium"
                android:gravity="start"
                android:hint="@string/correo_electronico"
                android:maxLines="30"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="35dp"
                android:drawableLeft="@drawable/ic_mail"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
                android:autofillHints="email"
                android:drawableStart="@drawable/ic_mail" />

            <TextView
                android:id="@+id/textViewEmailError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/gill_sans_mt_medium"
                android:gravity="center_horizontal"
                android:textColor="@color/text_red"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input"
                android:fontFamily="@font/gill_sans_mt_medium"
                android:gravity="start"
                android:hint="@string/nombre"
                android:maxLines="30"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
                android:autofillHints="name"
                android:drawableStart="@drawable/ic_person" />

            <TextView
                android:id="@+id/textViewNameError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/gill_sans_mt_medium"
                android:gravity="center_horizontal"
                android:textColor="@color/text_red"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextName" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input"
                android:fontFamily="@font/gill_sans_mt_medium"
                android:gravity="start"
                android:hint="@string/contraseña"
                android:maxLines="30"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextName"
                android:autofillHints="password"
                android:drawableStart="@drawable/ic_lock" />


            <TextView
                android:id="@+id/textViewPasswordError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/gill_sans_mt_medium"
                android:gravity="center_horizontal"
                android:textColor="@color/text_red"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

            <ImageView
                android:id="@+id/imageViewShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:background="@drawable/ic_eye_line"
                app:layout_constraintBottom_toBottomOf="@+id/editTextPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTextPassword"
                android:contentDescription="@string/ver_u_ocultar_contrase_a"
                android:layout_marginEnd="30dp" />


            <EditText
                android:id="@+id/editTextPasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input"
                android:fontFamily="@font/gill_sans_mt_medium"
                android:gravity="start"
                android:hint="@string/confirmar_contraseña"
                android:maxLines="30"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
                android:autofillHints="confirm password"
                android:drawableStart="@drawable/ic_lock" />

            <TextView
                android:id="@+id/textViewPasswordConfirmError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/gill_sans_mt_medium"
                android:gravity="center_horizontal"
                android:textColor="@color/text_red"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPasswordConfirm" />

            <ImageView
                android:id="@+id/imageViewShowConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:background="@drawable/ic_eye_line"
                app:layout_constraintBottom_toBottomOf="@+id/editTextPasswordConfirm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTextPasswordConfirm"
                android:contentDescription="@string/ver_u_ocultar_confirmaci_n_de_contrase_a"
                android:layout_marginEnd="30dp" />

            <Button
                android:id="@+id/buttonContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/boton_oscuro_disabled"
                android:fontFamily="@font/gill_sans_mt_bold"
                android:text="@string/continuar"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_marginTop="35dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPasswordConfirm" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gill_sans_mt_bold"
            android:gravity="center_horizontal"
            android:text="@string/ya_tienes_cuenta"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"
            android:alpha="0.7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp" />


        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gill_sans_mt_bold"
            android:gravity="center_horizontal"
            android:text="@string/iniciar_sesi_n"
            android:textColor="@color/purple"
            android:textSize="23sp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>